Added smaple responses